static/notes/iptables/ip6tables.rules
# /var/lib/ip6tables/rules-save

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmpv6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -p tcp -m multiport --dports 22 -j ACCEPT

-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmpv6 -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p udp --dport 53,123 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -p tcp -m multiport --dports 53,80,443 -j ACCEPT
-A OUTPUT -j LOG --log-prefix "failedOut: "
-A OUTPUT -j REJECT

COMMIT
